use string resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
       the License.
       -->
     <string name="app_name">AndroidDevChallenge</string>
+    <string name="start">start</string>
+    <string name="reset">reset</string>
+    <string name="time">%1$d secs</string>
 </resources>
